# drcs-bmp-converter

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
drcs_bmp_converter/: __init__.py  cli.py  drcs_converter.py
src/: __init__.py  cli.py
